--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "i18next": "^23.2.3",
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
-    "react-native": "0.72.0"
+    "react-native": "0.72.0",
+    "react-native-bootsplash": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
