--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
     "react-native": "0.72.0",
-    "react-native-bootsplash": "^4.7.2"
+    "react-native-bootsplash": "^4.7.2",
+    "react-native-config": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
