--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.15",
+    "axios": "^1.4.0",
     "i18next": "^23.2.3",
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
