--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-i18next": "^13.0.1",
     "react-native": "0.72.0",
     "react-native-bootsplash": "^4.7.2",
-    "react-native-config": "^1.5.1"
+    "react-native-config": "^1.5.1",
+    "react-native-safe-area-context": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
